--- a/frontend/src/css/Yasiru/EmpDashboardSideBarStyle.module.css
+++ b/frontend/src/css/Yasiru/EmpDashboardSideBarStyle.module.css
@@ -33,7 +33,7 @@
   
   /* Dashboard Divider */
   .dashboard-divider {
-    border: 1px solid #9b9a9a;
+    border: 1px solid #790d0d;
     margin-top: 10px;
   }
   
