--- a/frontend/src/css/Yasiru/profilelogingStyle.module.css
+++ b/frontend/src/css/Yasiru/profilelogingStyle.module.css
@@ -31,6 +31,8 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  align-items: center;
+  margin-right: 20px;
 }
 
 .submitBtn:hover {
