--- a/frontend/src/css/Dasun/Header.css
+++ b/frontend/src/css/Dasun/Header.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
+/* @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
 body {
 	margin: 0;
 	background: #222;
@@ -70,4 +70,4 @@ nav a::before {
 
 nav a:hover::before {
   width: 100%;
-}
+} */
