--- a/frontend/src/css/Dasun/customerBlog.css
+++ b/frontend/src/css/Dasun/customerBlog.css
@@ -1,69 +1,69 @@
 /* Reset default margin and padding */
-body, h2, h3, p {
+/* body, h2, h3, p {
     margin: 0;
     padding: 0;
-  }
+  } */
   
   /* Main container */
-  #blog_page {
+  /* #blog_page {
     max-width: 90%;
     margin: 0 auto;
     padding: 20px;
-  }
+  } */
   
   /* Page title */
-  #blog_page_heading {
+  /* #blog_page_heading {
     font-size: 30px;
     color: #fff;
     text-align: center;
     margin-bottom: 20px;
-  }
+  } */
   
   /* Blog list container */
-  .blog-list {
+  /* .blog-list {
     display: flex;
     flex-wrap: wrap;
-  }
+  } */
   
   /* Individual blog item */
-  #blog_page_item {
-    /* width: calc(40% - 20px); Two items per row with spacing */
+  /* #blog_page_item {
+    
     width: 100%;
     height: 200px;
     margin-bottom: 30px;
     padding: 20px;
     border: 1px solid #ddd;
-  }
+  } */
   
   /* Blog item heading */
-  #blog_page_item_topic {
+  /* #blog_page_item_topic {
     font-size: 20px;
     color: #fff;
     margin-bottom: 10px;
-  }
+  } */
   
   /* Blog item content */
-  #blog_page_item_content {
+  /* #blog_page_item_content {
     font-size: 12px;
     font-style: normal;
     color: #e6efec;
     line-height: 1.5;
-  }
+  } */
   
   /* Blog item image */
-  #blog_page_item_image {
+  /* #blog_page_item_image {
     display: block;
     margin-top: 15px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 100%;
     height: auto;
-  }
+  } */
   
   /* Responsive layout */
-  @media (max-width: 768px) {
+  /* @media (max-width: 768px) {
     .blog-item {
-      width: 100%; /* Full width on smaller screens */
+      width: 100%; 
     }
-  }
+  } */
   
