--- a/frontend/src/css/Dasun/displayFaq.css
+++ b/frontend/src/css/Dasun/displayFaq.css
@@ -1,16 +1,16 @@
 /* Container styles */
-.FaqContainer {
+/* .FaqContainer {
     margin-top: 20px;
-}
+} */
 
 /* Table styles */
-.FaqTable {
+/* .FaqTable {
     width: 100%;
     border-collapse: collapse;
-}
+} */
 
 /* Table header styles */
-.theader {
+/* .theader {
     background-color: #f5f5f5;
 }
 
@@ -19,21 +19,21 @@
     text-align: left;
     color: black;
     border-bottom: 1px solid #ddd;
-}
+} */
 
 /* Table body styles */
-.tbody td {
+/* .tbody td {
     padding: 12px;
     border-bottom: 1px solid #ddd;
-}
+} */
 
 /* Hover effect for table rows */
-.tbody tr:hover {
+/* .tbody tr:hover {
     background-color: gray;
-}
+} */
 
 /* Button styles */
-.UpdateBtn, .DeleteBtn {
+/* .UpdateBtn, .DeleteBtn {
     padding: 8px 16px;
     border: none;
     cursor: pointer;
@@ -50,4 +50,4 @@
 .DeleteBtn {
     background-color: #dc3545;
     color: #fff;
-}
+} */
