--- a/frontend/src/css/Dasun/faqDashboard.css
+++ b/frontend/src/css/Dasun/faqDashboard.css
@@ -1,21 +1,21 @@
 /* Dashboard Container */
-.dashboardContainer {
+/* .dashboardContainer {
     display: flex;
     max-height: 100vh;
-  }
+  } */
   
   /* Sidebar */
-  .sideBar {
-    flex: 0 0 250px; /* Set sidebar width */
-  }
+  /* .sideBar {
+    flex: 0 0 250px;
+  } */
   
   /* Dashboard Content */
-  .dashboardContent {
-    flex: 1; /* Take up remaining space */
+  /* .dashboardContent {
+    flex: 1; 
     padding: 20px;
     overflow: hidden;
-  }
+  } */
   
-  .removeService{
+  /* .removeService{
     margin-top: 100px;
-  }
+  } */
