--- a/frontend/src/css/Dasun/forms.css
+++ b/frontend/src/css/Dasun/forms.css
@@ -1,22 +1,22 @@
-/* formStyles.css */
+
 
 /* Style the form container */
-.form-container {
+/* .form-container {
     width: 50%;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
-}
+} */
 
 /* Style form labels */
-.form-group label {
+/* .form-group label {
     font-weight: bold;
-}
+} */
 
 /* Style form inputs */
-.form-control {
+/* .form-control {
     width: 100%;
     padding: 10px;
     font-size: 16px;
@@ -24,19 +24,19 @@
     border-radius: 5px;
     box-sizing: border-box;
     margin-bottom: 10px;
-}
+} */
 
 /* Style form submit button */
-.btn-primary {
+/* .btn-primary {
     background-color: #007bff;
     color: #fff;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-}
+} */
 
 /* Style form submit button on hover */
-.btn-primary:hover {
+/* .btn-primary:hover {
     background-color: #0056b3;
-}
+} */
