--- a/frontend/src/css/nisalka/dashboardStyles.module.css
+++ b/frontend/src/css/nisalka/dashboardStyles.module.css
@@ -33,12 +33,13 @@
     background-color: #ae7d00;
     color: #ffffff;
     display: block;
-    width: 220px;
+    width: 250px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     padding: 0.5rem 1rem;
     text-decoration: none;
     transition: background-color 0.3s ease;
+    border-color: #114eda;
 
   }
   .link:hover {
@@ -50,7 +51,7 @@
     background-color: #ddca9a;
     color: #000000;
     display: block;
-    width: 250px;
+    width: 270px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     padding: 0.5rem 1rem;
