--- a/frontend/src/css/nisalka/LoginStyles.module.css
+++ b/frontend/src/css/nisalka/LoginStyles.module.css
@@ -110,6 +110,12 @@
     bottom: 10px;
     right: 10px; 
 }
+.engsticker1{
+	width: 20px;
+    position: fixed;
+    bottom: 10px;
+    right: 60px; 
+}
 .back{
     width: 30px;
     height: 30px;
