--- a/frontend/src/css/Maleesha/ImageUploadForm.module.css
+++ b/frontend/src/css/Maleesha/ImageUploadForm.module.css
@@ -1,4 +1,4 @@
-.image-container {
+.imagecontainer {
     max-width: 500px;
     margin: 0 auto;
     padding: 20px;
@@ -11,7 +11,7 @@
     text-align: center;
   }
   
-  .form-group {
+  .formgroup {
     margin-bottom: 20px;
   }
   
