--- a/frontend/src/css/Dasun/addMessage.css
+++ b/frontend/src/css/Dasun/addMessage.css
@@ -1,4 +1,4 @@
-#send_message_page {
+/* #send_message_page {
     width: 80%;
     margin: auto;
     padding: 20px;
@@ -28,4 +28,4 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-  }
+  } */
