--- a/frontend/src/css/Dasun/addFeebackForm.css
+++ b/frontend/src/css/Dasun/addFeebackForm.css
@@ -1,4 +1,4 @@
-#add_feedback_page {
+/* #add_feedback_page {
     width: 80%;
     margin: auto;
     padding: 20px;
@@ -46,4 +46,4 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-  }
+  } */
