--- a/frontend/src/css/Dasun/allFaq.css
+++ b/frontend/src/css/Dasun/allFaq.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
+/* @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
 body {
 	margin: 0;
 	background: #222;
@@ -33,4 +33,4 @@ td {
 
 .DeleteBtn {
     background-color: red;
-}
+} */
