--- a/frontend/src/css/Dasun/allMessages.css
+++ b/frontend/src/css/Dasun/allMessages.css
@@ -1,6 +1,6 @@
 /* MessagePage.css */
 
-#Message_page {
+/* #Message_page {
     width: 80%;
     margin: auto;
     padding: 20px;
@@ -64,13 +64,13 @@
     padding: 12px;
     text-align: left;
     border-bottom: 1px solid #ddd;
-  }
+  } */
   
   
   
   
   /* Button styles */
-  .ReplyBtn {
+  /* .ReplyBtn {
     padding: 8px 16px;
     background-color: #007bff;
     color: #fff;
@@ -103,5 +103,5 @@
       width: 100%;
       padding: 10px;
     }
-  }
+  } */
   
