--- a/frontend/src/css/Maleesha/Email.css
+++ b/frontend/src/css/Maleesha/Email.css
@@ -49,6 +49,6 @@
     margin-top: 10px;
     text-align: center;
     font-weight: bold;
-    color: green; /* Initial color */
+    color: green;
   }
   
