--- a/frontend/src/css/chavidu/viewBooking.module.css
+++ b/frontend/src/css/chavidu/viewBooking.module.css
@@ -37,7 +37,7 @@
   
   th, td {
     padding: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
   }
   
   th {
@@ -45,7 +45,10 @@
   }
   
   tbody tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #000000;
+  }
+  tr{
+    background-color: #505050;
   }
   
   .circle {
